examples/test/testpolicy4965.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4965
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key14: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value20
          key3: value12
          key15: value34
      podSelector:
        matchLabels:
          key42: value27
          key5: value30
          key14: value14
